--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-{
-    "sessionid": "15649931872%3A8UwsLrkqBaOqz3%3A10%3AAYeKERHyah8DTYDEDZwfWtTkNczEPa6X5Iq8quDdew",
-    "user_agent": "Instagram 155.0.0.37.107 Android",
-    "min_delay": 0.2,
-    "max_delay": 2.0
-}
+SESSION_ID=15649931872%3A8UwsLrkqBaOqz3%3A10%3AAYeKERHyah8DTYDEDZwfWtTkNczEPa6X5Iq8quDdew
+USER_AGENT=Instagram 155.0.0.37.107 Android
+MIN_DELAY=0.2
+MAX_DELAY=2.0
